--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>luckygirls</title>
+    <title>医院消毒追溯管理系统</title>
      <!-- 图标 -->
 	<link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   </head>
